--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
         <div class="mark">
           <a href="#"><img src="img/ccm.png" alt="ccm마크" style="width: 62px" /></a>
           <a href="#"><img src="img/wa.gif" alt="웹접근성 마크" style="width: 62px" /></a>
-          <a href="#"><img src="img/bank1.png" alt="은행우수기업" /></a>
+          <a href="#"><img src="img/bank1.PNG" alt="은행우수기업" /></a>
         </div>
       </div>
     </footer>
