--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
           <li><a href="#">카드</a></li>
           <li>
             <select title="문의 유형을 선택해 주세요">
-              <option value="SKT">전체서비스</option>
-              <option value="PAYMENT">금융서비스</option>
-              <option value="BUG">맴버쉽서비스</option>
-              <option value="SERVICE">조은특화서비스</option>
+              <option>전체서비스</option>
+              <option>금융서비스</option>
+              <option>맴버쉽서비스</option>
+              <option>조은특화서비스</option>
             </select>
           </li>
         </ul>
         <ul class="top_nav top_nav_3">
           <li>
             <select title="문의 유형을 선택해 주세요">
-              <option value="SKT">GLOBAL</option>
-              <option value="PAYMENT">English</option>
-              <option value="BUG">Chinese</option>
-              <option value="SERVICE">Hong Kong</option>
+              <option>GLOBAL</option>
+              <option>English</option>
+              <option>Chinese</option>
+              <option>Hong Kong</option>
             </select>
           </li>
           <li>
